fix some minor findbug related issues
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@1764226 13f79535-47bb-0310-9956-ffa450edef68